--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "cra-template": "1.1.3",
+    "formik": "^2.2.9",
     "react": "^18.0.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.0.0",
@@ -12,12 +13,14 @@
     "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.1.0",
     "react-redux": "^7.2.8",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.2",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
